--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true nodemon index.js",
     "build": "cross-env NODE_ENV=production keystone build",
     "start": "cross-env NODE_ENV=production keystone start",
     "create-tables": "cross-env keystone create-tables",
@@ -19,16 +19,11 @@
   "repository": "https://github.com/keystonejs/keystone/tree/master/packages/create-keystone-app/example-projects/nuxt",
   "homepage": "https://github.com/keystonejs/keystone",
   "dependencies": {
-    "@keystonejs/access-control": "^6.3.0",
-    "@keystonejs/adapter-mongoose": "^10.1.1",
-    "@keystonejs/app-admin-ui": "^7.3.12",
-    "@keystonejs/app-graphql": "^6.2.0",
-    "@keystonejs/fields": "^21.0.0",
-    "@keystonejs/keystone": "^18.0.0",
     "config": "^3.3.3",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "install": "^0.13.0",
+    "mongoose": "^5.11.9",
     "nats": "^1.4.10-0",
     "npm": "^6.14.10"
   },
