--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
     "nats": "^1.4.10-0",
     "npm": "^6.14.10"
