--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "cross-env NODE_ENV=production keystone build",
     "start": "cross-env NODE_ENV=production keystone start",
     "create-tables": "cross-env keystone create-tables",
-    "nats:start": "nats-server",
+    "nats:start": "vendor/nats-server -c nontls.conf",
     "nats:docker": "docker run -p 4222:4222 -ti nats:latest"
   },
   "repository": "https://github.com/keystonejs/keystone/tree/master/packages/create-keystone-app/example-projects/nuxt",
